--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -1,3 +1,27 @@
-<p>
-  sidebar works!
-</p>
+<mat-list>
+  <h3 mat-subheader>项目</h3>
+  <mat-list-item mat-line>
+    <mat-icon mat-list-icon>menu</mat-icon>
+    <span mat-line>项目首页</span>
+    <span mat-line mat-subheader>查看你的项目</span>
+  </mat-list-item>
+  <mat-list-item mat-line="">
+    <span>项目首页</span>
+  </mat-list-item>
+  <h3 mat-subheader>日历</h3>
+  <mat-list-item mat-line>
+    <mat-icon mat-list-icon>today</mat-icon>
+    <span mat-line>月视图</span>
+    <span mat-line mat-subheader>查看你的项目</span>
+  </mat-list-item>
+  <mat-list-item mat-line>
+    <mat-icon mat-list-icon>today</mat-icon>
+    <span mat-line>周视图</span>
+    <span mat-line mat-subheader>查看你的项目</span>
+  </mat-list-item>
+  <mat-list-item mat-line>
+    <mat-icon mat-list-icon>today</mat-icon>
+    <span mat-line>日视图</span>
+    <span mat-line mat-subheader>查看你的项目</span>
+  </mat-list-item>
+</mat-list>
