--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<mat-sidenav-container>
+<mat-sidenav-container [class.myapp-dark-theme]="darkTheme">
   <mat-sidenav #sidenav>
     <app-sidebar></app-sidebar>
   </mat-sidenav>
@@ -6,6 +6,7 @@
     <header>
       <app-header
         (toggle)="sidenav.toggle()"
+        (toggleDarkTheme)="switchTheme($event)"
       ></app-header>
     </header>
     <main>
