--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -1,13 +1,33 @@
-<mat-card>
-  <mat-card-header>
-    <mat-card-title>登录：</mat-card-title>
-  </mat-card-header>
-  <mat-card-content>
-    <mat-form-field >
-      <input matInput placeholder="您的email" value="Sushi">
-    </mat-form-field>
-  </mat-card-content>
-  <mat-card-actions>
-    <p>还没有账户? <a href="">注册</a></p>
-  </mat-card-actions>
-</mat-card>
+<form>
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>登录：</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <mat-form-field class="full-width">
+        <input matInput placeholder="账户" value="Sushi">
+      </mat-form-field>
+      <mat-form-field class="full-width" >
+        <input matInput placeholder="密码" value="Sushi">
+      </mat-form-field>
+    </mat-card-content>
+    <mat-card-actions class="text-right">
+      <p>还没有账户? <a href="">注册</a></p>
+    </mat-card-actions>
+  </mat-card>
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>
+        每日佳句
+      </mat-card-title>
+      <mat-card-subtitle>
+        满足感在于不断的努力，而不是现有成就，全心努力会胜利满满
+      </mat-card-subtitle>
+    </mat-card-header>
+    <img mat-card-image src="/assets/quote_fallback.jpg" alt="">
+    <mat-card-content>
+      Satisfaction lies in the effort, not inthe attainment, Full effort is full
+    </mat-card-content>
+
+  </mat-card>
+</form>
