--- a/src/app/project/project-list/project-list.component.html
+++ b/src/app/project/project-list/project-list.component.html
@@ -4,6 +4,7 @@
   class="card"
   (onInvite)="launchInviteDialog()"
   (onEdit)="launchUpdateDialog(project)"
+  (onDel)="launchDelDialog(project)"
 >
 
 </app-project-item>
