--- a/src/app/task/task-item/task-item.component.html
+++ b/src/app/task/task-item/task-item.component.html
@@ -5,6 +5,8 @@
     'priority-emergency': item.priority == 1
   }"
   (click)="onItemClick()"
+   [@item]="widerPriority"
+
 >
   <mat-checkbox
     class="completion-status"
