--- a/src/app/project/project-list/project-list.component.html
+++ b/src/app/project/project-list/project-list.component.html
@@ -1,12 +1,17 @@
-<app-project-item
-  *ngFor="let project of projects"
-  [item]="project"
-  class="card"
-  (onInvite)="launchInviteDialog()"
-  (onEdit)="launchUpdateDialog(project)"
-  (onDel)="launchDelDialog(project)"
->
-</app-project-item>
+<div
+  class="container"
+  [@listAnim]="projects.length">
+  <app-project-item
+    *ngFor="let project of projects"
+    [item]="project"
+    class="card"
+    (onInvite)="launchInviteDialog()"
+    (onEdit)="launchUpdateDialog(project)"
+    (onDel)="launchDelDialog(project)"
+  >
+  </app-project-item>
+</div>
+
 
 <button mat-fab type="button" class="fab-button" (click)="openNewProjectDialog()">
   <mat-icon>add</mat-icon>
